Update drone.yml for public use

--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,7 @@
         {
             "name": "Tom Adams",
             "email": "tom@dxw.com",
-            "homepage": "http://dxw.com"
+            "homepage": "https://www.dxw.com/"
         }
     ],
     "autoload": {
