--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,13 @@
 language: php
 sudo: false
+install:
+  - composer install
+script:
+  - vendor/bin/phpunit
 php:
+  - 5.4
   - 5.5
   - 5.6
+  - 7.0
   - hhvm
   - nightly
