--- a/composer.json
+++ b/composer.json
@@ -16,5 +16,8 @@
         "psr-4": {
             "Dxw\\": "src/"
         }
+    },
+    "require-dev": {
+        "phpunit/phpunit": "4.8.*"
     }
 }
